[gd_scene load_steps=35 format=2]

[ext_resource path="res://root.gd" type="Script" id=1]
[ext_resource path="res://resources/texgyreadventor-regular.otf" type="DynamicFontData" id=2]
[ext_resource path="res://resources/0001.png" type="Texture" id=3]
[ext_resource path="res://resources/pressssed.png" type="Texture" id=4]
[ext_resource path="res://resources/arial.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://resources/MainBg.png" type="Texture" id=6]
[ext_resource path="res://resources/topbar.png" type="Texture" id=7]
[ext_resource path="res://resources/sidebar.png" type="Texture" id=8]
[ext_resource path="res://resources/myname.png" type="Texture" id=9]
[ext_resource path="res://resources/logo.png" type="Texture" id=10]
[ext_resource path="res://resources/midbar.png" type="Texture" id=11]
[ext_resource path="res://resources/bart.png" type="Texture" id=12]
[ext_resource path="res://resources/submuit.png" type="Texture" id=13]
[ext_resource path="res://resources/b222222.png" type="Texture" id=14]
[ext_resource path="res://resources/b23.png" type="Texture" id=15]
[ext_resource path="res://list.gd" type="Script" id=16]
[ext_resource path="res://help.gd" type="Script" id=17]
[ext_resource path="res://resources/clockarrow.png" type="Texture" id=18]
[ext_resource path="res://resources/clocker.png" type="Texture" id=19]
[ext_resource path="res://resources/b11.png" type="Texture" id=20]
[ext_resource path="res://resources/b13.png" type="Texture" id=21]
[ext_resource path="res://Scenes/List.gd" type="Script" id=22]
[ext_resource path="res://resources/b01.png" type="Texture" id=23]
[ext_resource path="res://resources/b03.png" type="Texture" id=24]
[ext_resource path="res://resources/b0.png" type="Texture" id=25]
[ext_resource path="res://Scenes/Helper.gd" type="Script" id=26]

[sub_resource type="StreamTexture" id=1]
flags = 4
load_path = "res://.import/pressssed.png-5db4549a5a9b5999d27c6e37904eb439.stex"

[sub_resource type="StreamTexture" id=2]
flags = 4
load_path = "res://.import/0001.png-8fc67e807ce8ae3e821f5ad78a17d1a6.stex"

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 14
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]
size = 14
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=6]
size = 12
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=7]
size = 12
font_data = ExtResource( 2 )

[sub_resource type="StreamTexture" id=8]
flags = 4
load_path = "res://.import/b13.png-70f8b561cbe47daf9dbb6cbe861ea59c.stex"

[node name="root" type="Node2D"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 600.0
margin_bottom = 400.0
color = Color( 0.231373, 0.541176, 0.341176, 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="MainBg" type="Sprite" parent="."]
position = Vector2( 299.896, 199.988 )
texture = ExtResource( 6 )
__meta__ = {
"_edit_lock_": true
}

[node name="Topbar" type="Sprite" parent="."]
position = Vector2( 299.896, 200.285 )
texture = ExtResource( 7 )
__meta__ = {
"_edit_lock_": true
}

[node name="Sidebar" type="Sprite" parent="."]
position = Vector2( 299.865, 200.067 )
texture = ExtResource( 8 )
__meta__ = {
"_edit_lock_": true
}

[node name="task" type="TextureButton" parent="."]
margin_left = 94.7593
margin_top = 3.25085
margin_right = 199.759
margin_bottom = 26.2509
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="preset" type="TextureButton" parent="."]
margin_left = 350.759
margin_top = 3.25085
margin_right = 455.759
margin_bottom = 26.2509
texture_pressed = SubResource( 1 )
texture_hover = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Myname" type="Sprite" parent="."]
position = Vector2( 581.378, 391.678 )
scale = Vector2( 0.613593, 0.551387 )
texture = ExtResource( 9 )
__meta__ = {
"_edit_lock_": true
}

[node name="Logo" type="Sprite" parent="."]
position = Vector2( 49.3391, 40.5968 )
texture = ExtResource( 10 )
__meta__ = {
"_edit_lock_": true
}

[node name="Midbar" type="Sprite" parent="."]
position = Vector2( 299.865, 282.447 )
texture = ExtResource( 11 )
__meta__ = {
"_edit_lock_": true
}

[node name="Label" type="Label" parent="."]
margin_left = 1.70474
margin_top = 84.0353
margin_right = 601.705
margin_bottom = 195.036
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "     Description                                            Date            Status"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="name" type="Label" parent="."]
margin_left = 139.0
margin_top = 84.0
margin_right = 278.0
margin_bottom = 108.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Node2D" type="Node2D" parent="."]
position = Vector2( 88.4151, 16.0809 )

[node name="bart" type="Sprite" parent="."]
position = Vector2( 339.902, 15.4318 )
texture = ExtResource( 12 )

[node name="displayItem" type="Node2D" parent="."]
position = Vector2( 78.1498, 30.8311 )
__meta__ = {
"_edit_lock_": true
}

[node name="header" type="Label" parent="displayItem"]
margin_left = 17.739
margin_top = 27.2441
margin_right = 170.739
margin_bottom = 49.2441
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0.168627, 0.858824, 0.00392157, 1 )
align = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="date" type="Label" parent="displayItem"]
margin_left = 201.0
margin_top = 26.9966
margin_right = 356.0
margin_bottom = 48.9966
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0.168627, 0.858824, 0.00392157, 1 )
align = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Preset" type="Node2D" parent="."]
visible = false

[node name="LineEdit1" type="LineEdit" parent="Preset"]
margin_left = 469.0
margin_top = 35.0
margin_right = 596.0
margin_bottom = 59.0
custom_fonts/font = SubResource( 6 )
text = "testerrrrrrrrrrrrr"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit2" type="LineEdit" parent="Preset"]
margin_left = 470.0
margin_top = 65.0
margin_right = 597.0
margin_bottom = 89.0
custom_fonts/font = SubResource( 6 )
text = "testerrrrrrrrrrrrr"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit3" type="LineEdit" parent="Preset"]
margin_left = 469.0
margin_top = 95.0
margin_right = 596.0
margin_bottom = 119.0
custom_fonts/font = SubResource( 6 )
text = "testerrrrrrrrrrrrr"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit4" type="LineEdit" parent="Preset"]
margin_left = 469.0
margin_top = 125.0
margin_right = 596.0
margin_bottom = 149.0
custom_fonts/font = SubResource( 6 )
text = "testerrrrrrrrrrrrr"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit5" type="LineEdit" parent="Preset"]
margin_left = 469.0
margin_top = 155.0
margin_right = 596.0
margin_bottom = 179.0
custom_fonts/font = SubResource( 6 )
text = "testerrrrrrrrrrrrr"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit6" type="LineEdit" parent="Preset"]
margin_left = 469.0
margin_top = 185.0
margin_right = 596.0
margin_bottom = 209.0
custom_fonts/font = SubResource( 6 )
text = "testerrrrrrrrrrrrr"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit7" type="LineEdit" parent="Preset"]
margin_left = 469.0
margin_top = 215.0
margin_right = 596.0
margin_bottom = 239.0
custom_fonts/font = SubResource( 6 )
text = "testerrrrrrrrrrrrr"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit8" type="LineEdit" parent="Preset"]
margin_left = 470.0
margin_top = 245.0
margin_right = 597.0
margin_bottom = 269.0
custom_fonts/font = SubResource( 6 )
text = "testerrrrrrrrrrrrr"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="submit" type="TextureButton" parent="Preset"]
margin_left = 470.0
margin_top = 332.0
margin_right = 591.0
margin_bottom = 372.0
texture_normal = ExtResource( 14 )
texture_pressed = ExtResource( 15 )
texture_hover = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="list" type="TextureButton" parent="."]
margin_left = 216.759
margin_top = 4.14175
margin_right = 321.759
margin_bottom = 27.1418
script = ExtResource( 16 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="menu" type="Node2D" parent="list"]
visible = false

[node name="box" type="Sprite" parent="list/menu"]
position = Vector2( 57.6147, 36.8465 )
scale = Vector2( 1, 3.28619 )
texture = ExtResource( 3 )

[node name="labels" type="Label" parent="list/menu"]
margin_left = 12.2182
margin_top = 13.4551
margin_right = 91.2182
margin_bottom = 73.4551
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "New List
Saved Lists
Premade Lists"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="list/menu"]
margin_left = -2.0
margin_right = 118.0
margin_bottom = 83.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="newList" type="TextureButton" parent="list/menu"]
margin_left = 8.7818
margin_top = 12.4364
margin_right = 140.782
margin_bottom = 32.4364
rect_scale = Vector2( 0.75, 1 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="savedList" type="TextureButton" parent="list/menu"]
margin_left = 9.0
margin_top = 33.0
margin_right = 141.0
margin_bottom = 56.0
rect_scale = Vector2( 0.75, 1 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="premadeList" type="TextureButton" parent="list/menu"]
margin_left = 8.7818
margin_top = 51.636
margin_right = 140.782
margin_bottom = 74.636
rect_scale = Vector2( 0.75, 1 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="help" type="TextureButton" parent="."]
margin_left = 478.759
margin_top = 4.14175
margin_right = 583.759
margin_bottom = 27.1418
script = ExtResource( 17 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="menu" type="Node2D" parent="help"]
visible = false

[node name="box" type="Sprite" parent="help/menu"]
position = Vector2( 57.6147, 36.8465 )
scale = Vector2( 1, 3.28619 )
texture = ExtResource( 3 )

[node name="labels" type="Label" parent="help/menu"]
margin_left = 12.2182
margin_top = 13.4551
margin_right = 91.2182
margin_bottom = 73.4551
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Tasks
Lists
Presets"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="help/menu"]
margin_left = -2.0
margin_right = 118.0
margin_bottom = 83.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="helpTask" type="TextureButton" parent="help/menu"]
margin_left = 8.7818
margin_top = 12.4364
margin_right = 140.782
margin_bottom = 32.4364
rect_scale = Vector2( 0.75, 1 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="helpList" type="TextureButton" parent="help/menu"]
margin_left = 9.0
margin_top = 33.0
margin_right = 141.0
margin_bottom = 56.0
rect_scale = Vector2( 0.75, 1 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="helpPreset" type="TextureButton" parent="help/menu"]
margin_left = 8.7818
margin_top = 51.636
margin_right = 140.782
margin_bottom = 74.636
rect_scale = Vector2( 0.75, 1 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Helper" type="Node2D" parent="."]
position = Vector2( 0, 76 )
script = ExtResource( 26 )

[node name="task" type="Node2D" parent="Helper"]
visible = false

[node name="text" type="Label" parent="Helper/task"]
margin_left = 474.0
margin_top = 38.0
margin_right = 592.0
margin_bottom = 109.0
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "To add a new task
click the Task Button 
at the top Left"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="text2" type="Label" parent="Helper/task"]
margin_left = 474.0
margin_top = 113.719
margin_right = 592.0
margin_bottom = 157.719
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Click the X button to
delete/finish a task"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="text3" type="Label" parent="Helper/task"]
margin_left = 473.056
margin_top = 168.464
margin_right = 591.056
margin_bottom = 212.464
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Clicking the task #
will show it at the top"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="text4" type="Label" parent="Helper/task"]
margin_left = 474.944
margin_top = 220.377
margin_right = 592.944
margin_bottom = 264.377
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Set the status of the
task by clicking it"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="list" type="Node2D" parent="Helper"]

[node name="text" type="Label" parent="Helper/list"]
margin_left = 474.0
margin_top = 38.0
margin_right = 592.0
margin_bottom = 109.0
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Add a new List by
clicking at the top
under \"List\""
__meta__ = {
"_edit_use_anchors_": false
}

[node name="text2" type="Label" parent="Helper/list"]
margin_left = 474.0
margin_top = 113.719
margin_right = 592.0
margin_bottom = 157.719
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Load saved lists to
the main stage"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="text3" type="Label" parent="Helper/list"]
margin_left = 473.056
margin_top = 168.464
margin_right = 591.056
margin_bottom = 212.464
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Look at premade lists
designed for general
purpose"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="deleteList" type="TextureButton" parent="Helper/list"]
margin_left = 472.521
margin_top = 271.222
margin_right = 593.521
margin_bottom = 311.222
texture_normal = ExtResource( 25 )
texture_pressed = ExtResource( 24 )
texture_hover = ExtResource( 23 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="presets" type="Node2D" parent="Helper"]
visible = false

[node name="text" type="Label" parent="Helper/presets"]
margin_left = 474.0
margin_top = 38.0
margin_right = 592.0
margin_bottom = 109.0
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Change presets
that will be available
when adding a 
task"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="text2" type="Label" parent="Helper/presets"]
margin_left = 471.477
margin_top = 129.658
margin_right = 589.477
margin_bottom = 210.658
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "normal sets it to the
Description
green sets it to the 
date"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="clocker" type="TextureButton" parent="."]
visible = false
margin_left = 361.525
margin_top = 189.99
margin_right = 650.525
margin_bottom = 478.99
rect_scale = Vector2( 0.35, 0.35 )
texture_normal = ExtResource( 19 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="clockarrow" type="Sprite" parent="clocker"]
position = Vector2( 146.329, 141.772 )
texture = ExtResource( 18 )
offset = Vector2( 0.004, -50 )

[node name="List" type="Node2D" parent="."]
script = ExtResource( 22 )

[node name="newList" type="Node2D" parent="List"]
visible = false

[node name="Label2" type="Label" parent="List/newList"]
margin_left = 470.886
margin_top = 84.6364
margin_right = 596.886
margin_bottom = 243.636
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Enter your List
Name and press
submit. note you
can access old
lists from Saved 
Lists Button"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="data" type="LineEdit" parent="List/newList"]
margin_left = 474.0
margin_top = 255.0
margin_right = 594.0
margin_bottom = 279.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="submit" type="TextureButton" parent="List/newList"]
margin_left = 472.206
margin_top = 302.327
margin_right = 593.206
margin_bottom = 328.327
texture_normal = ExtResource( 14 )
texture_pressed = ExtResource( 15 )
texture_hover = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="cancel" type="TextureButton" parent="List/newList"]
margin_left = 471.365
margin_top = 341.009
margin_right = 592.365
margin_bottom = 367.009
texture_normal = ExtResource( 20 )
texture_pressed = ExtResource( 21 )
texture_hover = SubResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="savedList" type="Node2D" parent="List"]
visible = false

[node name="cancel" type="TextureButton" parent="List/savedList"]
margin_left = 471.365
margin_top = 342.009
margin_right = 592.365
margin_bottom = 368.009
texture_normal = ExtResource( 20 )
texture_pressed = ExtResource( 21 )
texture_hover = SubResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="premadeList" type="Node2D" parent="List"]
visible = false

[node name="Label2" type="Label" parent="List/premadeList"]
margin_left = 468.0
margin_top = 82.0
margin_right = 604.0
margin_bottom = 241.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="cancel" type="TextureButton" parent="List/premadeList"]
margin_left = 471.365
margin_top = 342.009
margin_right = 592.365
margin_bottom = 368.009
texture_normal = ExtResource( 20 )
texture_pressed = ExtResource( 21 )
texture_hover = SubResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="draw" from="." to="." method="initialLoad"]
[connection signal="pressed" from="task" to="." method="handleKeyboard"]
[connection signal="pressed" from="preset" to="." method="presetsPressed"]
[connection signal="pressed" from="Preset/submit" to="." method="submitPresets"]
[connection signal="mouse_entered" from="list" to="list" method="mouseEntered"]
[connection signal="mouse_exited" from="list/menu/Control" to="list" method="destroy"]
[connection signal="pressed" from="list/menu/newList" to="list" method="newList"]
[connection signal="pressed" from="list/menu/savedList" to="list" method="savedList"]
[connection signal="pressed" from="list/menu/premadeList" to="list" method="premadeList"]
[connection signal="mouse_entered" from="help" to="help" method="mouseEntered"]
[connection signal="mouse_exited" from="help/menu/Control" to="help" method="destroy"]
[connection signal="pressed" from="help/menu/helpTask" to="help" method="helpTask"]
[connection signal="pressed" from="help/menu/helpList" to="help" method="helpList"]
[connection signal="pressed" from="help/menu/helpPreset" to="help" method="helpPreset"]
[connection signal="pressed" from="Helper/list/deleteList" to="List" method="deleteList"]
[connection signal="pressed" from="List/newList/submit" to="List" method="submit"]
[connection signal="pressed" from="List/newList/cancel" to="List" method="destroy"]
[connection signal="pressed" from="List/savedList/cancel" to="List" method="destroy"]
[connection signal="pressed" from="List/premadeList/cancel" to="List" method="destroy"]
